# chuk-mcp-her

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SPEC.md  fly.toml  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
examples/: aerial_search_demo.py  blackwater_estuary_scenario.py  capabilities_demo.py  conservation_area_demo.py  cross_reference_demo.py  enrichment_pipeline_demo.py  export_demo.py  gateway_search_demo.py  heritage_at_risk_demo.py  nearby_demo.py  nhle_search_demo.py  quick_start.py  scotland_designations_demo.py  scotland_search_demo.py  tool_runner.py
src/chuk_mcp_her/: __init__.py  async_server.py  constants.py  server.py
src/chuk_mcp_her/core/: __init__.py  arcgis_client.py  cache.py  coordinates.py  gateway_client.py  source_registry.py  spatial_index.py
src/chuk_mcp_her/core/adapters/: __init__.py  aim.py  base.py  conservation_area.py  heritage_at_risk.py  heritage_gateway.py  nhle.py  scotland.py
src/chuk_mcp_her/models/: __init__.py  responses.py
src/chuk_mcp_her/tools/: __init__.py
src/chuk_mcp_her/tools/aerial/: __init__.py  api.py
src/chuk_mcp_her/tools/conservation_area/: __init__.py  api.py
src/chuk_mcp_her/tools/crossref/: __init__.py  api.py
src/chuk_mcp_her/tools/discovery/: __init__.py  api.py
src/chuk_mcp_her/tools/map/: api.py  (+1 more)
tests/: conftest.py  test_aim_adapter.py  test_arcgis_client.py  test_cache.py  test_conservation_area_adapter.py  test_constants.py  test_coordinates.py  test_gateway_adapter.py  test_gateway_client.py  test_heritage_at_risk_adapter.py  test_map_tools.py  test_nhle_adapter.py  test_responses.py  test_scotland_adapter.py  test_server.py  test_source_registry.py  test_spatial_index.py  test_tools.py
(+10 files in other folders)
